# BitTorrent

./: .gitignore  CMakeLists.txt  README.md
src/: BencodedData.h  Box.h  Main.cpp
src/lib/bencode/: BencodeData.cpp  BencodedData.h
src/lib/bencode/decoder/: BencodeDecoder.cpp  BencodeDecoder.h
src/lib/bencode/encoder/: BencodeEncoder.cpp  BencodeEncoder.h
src/lib/decoder/: BencodeDecoder.cpp  BencodeDecoder.h
src/lib/encoder/: BencodeEncoder.cpp  BencodeEncoder.h
src/lib/http/: httplib.h
src/lib/info/: MetaInfo.cpp  MetaInfo.h  MetaInfoHash.h
src/lib/memory/: Box.h
src/lib/optional/: optional_ext.h
src/lib/parsing/: BencodeData.cpp  BencodedData.h  ParseResult.h  Parser.h
src/lib/peers/: PeerDiscovery.cpp  PeerDiscovery.h  PeerHandshakeData.cpp  PeerHandshakeData.h  peer.h  peer_discovery.cpp  peer_discovery.h
src/lib/result/: Result.h
src/lib/sockets/: AutoConnectingSocketClient.cpp  AutoConnectingSocketClient.h  ConnectedSocketClient.cpp  ConnectedSocketClient.h  SocketInfo.h  SocketType.h
src/lib/tinySHA/: TinySHA1.hpp
src/lib/visit/: Overload.h
